--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A Fastify server leveraging SWC for transpilation and Jest for testing.",
   "main": "dist/index.js",
   "scripts": {
-    "dev": "nodemon --watch 'src/**/*.ts' --watch '__tests__/**/*.ts' --exec 'node -r @swc-node/register' src/index.ts",
+    "dev": "nodemon --watch 'src' --ext '*' --exec 'node -r @swc-node/register' src/index.ts",
     "test": "jest",
     "build": "swc src -d dist",
     "start": "node dist/index.js"
