--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "nodemon --watch 'src' --ext '*' --exec 'node -r @swc-node/register' src/index.ts",
     "test": "jest",
-    "build": "swc src -d dist",
+    "build": "rimraf dist && swc src -d dist",
     "start": "node dist/index.js"
   },
   "keywords": [],
@@ -25,6 +25,7 @@
     "@types/node": "^20.9.2",
     "jest": "^29.7.0",
     "nodemon": "^3.0.1",
+    "rimraf": "^5.0.5",
     "ts-node": "^10.9.1"
   }
 }
