--- a/.github/workflows/general-ci.yml
+++ b/.github/workflows/general-ci.yml
@@ -1,9 +1,13 @@
 name: General CI Workflow
 
 on:
+  push:
+    branches:
+      - "**"
+
   pull_request:
     branches:
-      - master
+      - "**"
 
 jobs:
   test-and-build:
