--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/jest": "^29.5.14",
     "@types/node": "^22.13.0",
     "jest": "^29.7.0",
+    "license-checker": "^25.0.1",
     "nodemon": "^3.1.9",
     "rimraf": "^6.0.1",
     "ts-node": "^10.9.2"
