Separate direct and transitive deps in update-licenses job (#55)

--- a/.github/workflows/update-licenses.yml
+++ b/.github/workflows/update-licenses.yml
@@ -37,26 +37,37 @@ jobs:
           node-version: "lts/*"
           cache: pnpm
 
-      - name: Install dependencies
+      - name: Install direct dependencies (without shamefully-hoist)
+        run: pnpm install --frozen-lockfile
+
+      - name: Add license-checker globally
+        run: pnpm add -g license-checker
+
+      - name: Generate licenses for direct dependencies
+        run: license-checker --json > licenses_main-deps.json
+
+      - name: Reinstall all dependencies with transitive dependencies
         run: pnpm install --frozen-lockfile --shamefully-hoist
 
-      - name: Generate licenses.json
+      - name: Generate licenses for all dependencies
+        run: license-checker --json > licenses_sub-deps.json
+
+      - name: Display license files content
         run: |
-          pnpm add -g license-checker
-          license-checker --json > licenses.json
+          echo "==== Direct Dependencies (licenses_main-deps.json) ===="
+          cat licenses_main-deps.json
+          echo "==== Transitive Dependencies (licenses_sub-deps.json) ===="
+          cat licenses_sub-deps.json
 
-      - name: Display licenses.json content
-        run: cat licenses.json
-
-      - name: Commit and push updated licenses
+      - name: Commit and push updated license files
         env:
           GITHUB_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git add licenses.json
+          git add licenses_main-deps.json licenses_sub-deps.json
           if ! git diff --cached --quiet; then
-            git commit -m "chore: Update licenses.json"
+            git commit -m "chore: Update license files"
             git remote set-url origin https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }}
             git push origin HEAD:${{ github.event.pull_request.head.ref }}
           else
